--- a/src/composer.json
+++ b/src/composer.json
@@ -8,8 +8,14 @@
             "email": "jan.specian@google.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
     "require": {
         "slim/slim": "^3.0",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "slim/twig-view": "^2.4"
     }
 }
