--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "mobx-react": "^5.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "typescript": "^3.0.1"
   }
 }
