--- a/src/package.json
+++ b/src/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.3.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
+    "mobx-react-router": "^4.0.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
