--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "mobx-react-router": "^4.0.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-loading-components": "^1.1.12",
     "react-router-dom": "^4.3.1",
     "typescript": "^3.0.1"
   },
